--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </div>           
     </section>
     <div>
-        <button class="btn btn-primary text-center"><a href="./index.php"><i class="fa fa-hand-o-right" aria-hidden="true"></i></button></a>
+        <a href="index.php">Click here</a>
     </div>
 </body>
 </html>
