--- a/index.html
+++ b/index.html
@@ -42,8 +42,13 @@
         </div>           
     </section>
     <div>
-        <a href="index.php">Click here</a>
+        <button class="btn btn-primary" onclick="goto()">Click Me</button>
     </div>
+    <script>
+        function goto(){
+        header(Location:"index.php");
+               }
+    </script>
 </body>
 </html>
 
